Bug 396234: Crash when dialog comes up before automatic shutdown on Mac. r=bsmedberg.